2007-03-17  Inge Wallin  <inge@lysator.liu.se>
	
	Remove warnings for layouts
	* dialogs/KCConfigAxesPage.cc
	* dialogs/KCConfigFontPage.cc
	* dialogs/KCConfigDataPage.cc
	* dialogs/KCWizardSubtypePage.cc
	* dialogs/KCConfigSubtypePiePage.cc
	* dialogs/KCConfigSubtypePage.cc
	* dialogs/KCWizardAxesPage.cc
	* dialogs/KCConfigLegendPage.cc
	* dialogs/KCConfigDialog.cc
	* dialogs/KCConfigSubtypeLinePage.cc
	* dialogs/KCWizardDataPage.cc
	* dialogs/KCWizardLabelsLegendPage.cc
	* dialogs/KCConfigColorPage.cc
	* dialogs/KCConfigBackgroundPage.cc
	* dialogs/KCConfigSubtypeBarPage.cc
	* dialogs/KCPageLayout.cc
	Replace deprecated calls, mostly to constructors.
	* kchartDataEditor.cc: Don't compare signed and unsigned ints
	
	Qt3 -> Qt4 changes
	* dialogs/KCWizardAxesPage.h
	* dialogs/KCWizardCharttype.cc
	* dialogs/KCConfigDataPage.cc
	* dialogs/KCPrinterDialog.cc
	* dialogs/KCWizardSubtypePage.cc
	* dialogs/KCConfigSubtypePiePage.cc
	* dialogs/KCConfigSubtypePolarPage.cc
	* dialogs/KCWizardAxesPage.cc
	* dialogs/KCWizardCharttype.h
	* dialogs/KCWizardDataPage.cc
	* dialogs/KCWizardLabelsLegendPage.cc
	* kchartDataEditor.cc
	Q3VBoxLayout -> QVBoxLayout
	Q3HBoxLayout -> QHBoxLayout
	Q3GridLayout -> QGridLayout

	Remove obsolete files
	* kchartPieConfigPage.h
	* kchartPieConfigPage.cc
	* kchartComboConfigPage.h
	* kchartComboConfigPage.cc
	
2007-03-15  Inge Wallin  <inge@lysator.liu.se>

	Qt3 -> Qt4 changes
	* dialogs/KCConfigAxesPage.cc
	* dialogs/KCConfigFontPage.cc
	* dialogs/KCConfigHeaderFooterPage.cc
	* dialogs/KCConfigDataPage.cc
	* dialogs/KCConfigSubtypePage.cc
	* dialogs/KCConfigLegendPage.cc
	* dialogs/KCConfigLegendPage.h
	* dialogs/KCConfigSubtypeLinePage.cc
	* dialogs/KCConfigColorPage.cc
	* dialogs/KCConfigBackgroundPage.cc
	* dialogs/KCConfigSubtypeBarPage.cc
	Q3VBoxLayout -> QVBoxLayout
	Q3HBoxLayout -> QHBoxLayout
	Q3GridLayout -> QGridLayout

	EBN fixes:
	* kchart_factory.h (KChartFactory): explicit
	* kchart_part.h (KChartPart): explicit